<resources>
    <!-- Base application theme. -->
    <string name="app_name">Hillfort</string>
    <!--MENUS-->
    <string name="menu_addHillfort">Add</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_login">Log in</string>
    <string name="menu_reg">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>


    <!--MAIN FUNCTIONS -->
    <string name="save_hillfort">Save Hillfort</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="title_activity_maps">Map</string>
    <string name="checkbox_visited">Visited</string>
    <string name="checkbox_favorite">Favorited</string>
    <string name="menu_settings_save">Save Settings</string>
    <string name="reg_cancel">Cancel Registration</string>
    <string name="hillfort_search">Search</string>

    <!--BUTTONS. -->
    <string name="button_addImage">Add Image</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_location">Set Location</string>
    <string name="button_deleteHillfort">Remove Hillfort</string>
    <string name="button_logIn">Log in</string>
    <string name="button_register">Register</string>

    <!-- HINTS. -->
    <string name="enter_hillfort_title">Please enter a Hillfort name</string>
    <string name="hint_email">Enter Email Here</string>
    <string name="hint_password"> Enter Password Here</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="toast_logout">Bye for now</string>
    <string name="toast_changed_cant_be_blank">Please enter valid credentials</string>
    <string name="toast_enterTitlePlease">Please enter a title for hillfort</string>
    <string name="hint_hillfortNotes">Additional Notes</string>


    <!-- HEADINGS. -->
    <string name="login_title">Log In</string>
    <string name="reg_title">Register</string>
    <string name="setting_title">Settings</string>
    <string name="loader_text">Welcome to the Hillfort App</string>
    <string name="settings_hillfort_count_total">Total Hillforts in App</string>
    <string name="settings_hillfort_count_visited">Hillforts Visited</string>
    <string name="settings_hillfort_count_favorite">Favorites</string>


</resources>
